2004-04-06  Tom Copeland <tom@infoether.com>

	* www/include/languages/Base.tab: Fixed stats_user_graph typo.
	* www/admin/trove/trove_cat_edit.php: Fixed bug which prevented
	trove categories from being deleted even if they were not
	referenced by a project.

2004-04-02  Tim Perdue  <tim@perdue.net>

	* Small mass update bug in task mgr - htmlspecialchars() would be 
	applied again to the summary field

2004-03-26  Sung Kim <hunkim@cs.ucsc.edu>
	* Added status checking and updating module for the mailing list creating cronjobs
	* Added status checking to show if a mailing list is activated

2004-03-26  Guillaume Smet <guillaume-gforge@smet.org>

	* Fixed a bug in project admin interface. People admin links didn't work.
	* Fixed a typo in French.tab
	* Applied patch [ #714 ] by Lele Gaifax : updated Italian translation
	* Applied patch [ #731 ] by Jason Chen : updated Chinese translation

2004-03-26  Christian Bayle <bayle@debian.org>

	* Take in account all new vars in setup script

2004-03-25  Tim Perdue  <tim@perdue.net>

	* added users.firstname,users.lastname,users.address2,users.ccode 
	each user now can enter a complete address and choose a country.

	* added users.theme_id and dropped theme_prefs table. session.php
	now does a join against themes table to get dirname in single query.

2004-03-25  Guillaume Smet <guillaume-gforge@smet.org>

	* implemented some new config flags to enable/disable partially implemented
	features (vhost, multimedia, database)
	* added a new cronjob called tarballs.php to generate CVS tarballs. It uses a
	modified version of deb-specific/tarballs.sh (not added yet in README.root)
	* added $sys_cvs_tarballs_path in config to make tarballs generation and
	download work in mainstream
	* updated French localization

2004-03-24  Guillaume Smet <guillaume-gforge@smet.org>

	* implemented a correct management of $sys_use_people flag in all GForge

2004-03-23  Tom Copeland <tom@infoether.com>
